# lavalink

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: application.yml  bot.py
examples/exts/: music.py
interactions/ext/lavalink/: __init__.py  base.py  client.py  extension.py  helpers.py  main.py  models.py  player.py  websocket.py
interactions_/ext/lavalink/: __init__.py  events.py  extension.py
interactions_lavalink/: __init__.py  events.py  extension.py  player.py
